--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,9 +1,38 @@
 .container__articles{
-  margin-top: 30px;
-
+  margin-top: 1.875rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
+
+.container__news{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.fieldset {
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border-color: #820ad1;
+
+}
+
+legend {
+  color: #fff;
+  text-align: start;
+  font-size: 30px;
+  text-shadow: -1px -1px 0 #820ad1;
+}
+
+@media screen and (min-width: 380px) {.container__articles{
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}}
 
 
