--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,9 +5,9 @@
 
     <app-big-card
       Id="1"
-      photoCover="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/7F51FA9F6CBD9F0C9B1394B1CC0A6A842D07091318674E234CD33CBF7C28CDC3/scale?width=1200&aspectRatio=1.78&format=jpeg"
-      cardTitle="NOVO HOMEM DE FERRO EM 3D"
-      cardDescription="Marvel Anuncia novo homem de ferro"
+      photoCover="https://assets.nuuvem.com/image/upload/v1/products/628f94e62c6f1f0014828779/sharing_images/oczi6kxmpr37wggkpamc.jpg"
+      cardTitle="Ace Combat 7: Skies Unknown"
+      cardDescription="Se você vibrou com os filmes da franquia Top Gun, então vai adorar conhecer Ace Combat 7: Skies Unknown."
       >
     </app-big-card>
 
@@ -15,24 +15,52 @@
   <div class="articles__others">
     <app-small-card
       Id="2"
-      cardTitle="Nova Série anunciada no Disney +"
-      photoCover="https://disneyplusbrasil.com.br/wp-content/uploads/2021/07/Series-Marvel-Disney-Plus-1024x576.jpg"
+      cardTitle="Battlefield 2 - Modern Combat"
+      photoCover="https://t2.tudocdn.net/215108?w=1920"
     >
     </app-small-card>
 
     <app-small-card
       Id="3"
-      cardTitle="Novo filme do pantera negra lançado em breve"
-      photoCover="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/35720ACD323F927C3A83D809D0F460BD3651740DA519BCC184B6F042057EA14D/scale?width=1200&aspectRatio=1.78&format=jpeg"
+      cardTitle="TimeSplitters 2 já havia feito muito sucesso dois anos antes. "
+      photoCover="https://i.ytimg.com/vi/N61WNeaeJdE/maxresdefault.jpg"
     >
     </app-small-card
     >
 
     <app-small-card
       Id="4"
-      cardTitle="Novo filme dos X-men está em pós produção, afirma diretor"
-      photoCover="https://midias.correiobraziliense.com.br/_midias/jpg/2022/07/22/675x450/1_xmen-26096415.jpeg?20220722171339?20220722171339"
+      cardTitle="Black é um jogo de tiro em primeira pessoa."
+      photoCover="https://www.jogos.palpitedigital.com/y/30297/jogo-ps2-black.jpg"
     >
     </app-small-card>
   </div>
 </div>
+<div class="container__news">
+  <fieldset class="fieldset">
+    <legend>&nbsp;&nbsp; Gaming News &nbsp;</legend>
+    <app-news Id="1"
+              photoCover="https://i0.wp.com/jornaldosjogos.com.br/wp-content/uploads/2020/10/mortal-kombat-11-ultimate.jpg?fit=800%2C450&ssl=1"
+              newsTitle="Mortal Kombat"
+              newsDescription="MORTAL KOMBAT traz seus Fatalities clássicos com gráficos incríveis e golpes exagerados!"
+    >
+    </app-news>
+    <app-news Id="2"
+              photoCover="https://img.olhardigital.com.br/wp-content/uploads/2022/12/god-of-war-2.jpg"
+              newsTitle="God of War"
+              newsDescription="Esta impressionante repaginação de God of War reúne todas as características marcantes dessa famosa franquia."
+    >
+    </app-news>
+    <app-news Id="3"
+              photoCover="https://static1-br.millenium.gg/articles/0/10/69/0/@/127577-cod-orig-1-article_image_t-1.jpg"
+              newsTitle="Call of Duty"
+              newsDescription="Experimente o Call of Duty: a franquia de tiro em primeira pessoa mais vendida do mundo."
+    ></app-news>
+    <app-news Id="4"
+              photoCover="https://meups.com.br/wp-content/uploads/2019/07/MEDAL-OF-HONOR-900x503.jpg"
+              newsTitle="Medal of Honor"
+              newsDescription="Explore jogos Medal of Honor da Electronic Arts, uma líder na distribuição de jogos para PC."
+    ></app-news>
+  </fieldset>
+</div>
+
